--- a/App.config
+++ b/App.config
@@ -1,32 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
             <section name="ContabSys.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
     </startup>
-    <userSettings>
-        <ContabSys.Properties.Settings>
-            <setting name="username" serializeAs="String">
-                <value>root</value>
-            </setting>
-            <setting name="password" serializeAs="String">
-                <value>xd</value>
-            </setting>
-            <setting name="basedados" serializeAs="String">
-                <value>ContabSysDB</value>
-            </setting>
-            <setting name="server" serializeAs="String">
-                <value>127.0.0.1</value>
-            </setting>
-            <setting name="porta" serializeAs="String">
-                <value>3308</value>
-            </setting>
-        </ContabSys.Properties.Settings>
-    </userSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -35,4 +16,23 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <userSettings>
+    <ContabSys.Properties.Settings>
+      <setting name="username" serializeAs="String">
+        <value>root</value>
+      </setting>
+      <setting name="password" serializeAs="String">
+        <value>xd</value>
+      </setting>
+      <setting name="basedados" serializeAs="String">
+        <value>ContabSysDB</value>
+      </setting>
+      <setting name="server" serializeAs="String">
+        <value>localhost</value>
+      </setting>
+      <setting name="porta" serializeAs="String">
+        <value>3308</value>
+      </setting>
+    </ContabSys.Properties.Settings>
+  </userSettings>
 </configuration>
