--- a/ContabSys.csproj
+++ b/ContabSys.csproj
@@ -70,6 +70,7 @@
       <HintPath>packages\System.Runtime.CompilerServices.Unsafe.5.0.0\lib\net45\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
     </Reference>
     <Reference Include="System.Transactions" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -134,6 +135,12 @@
     </Compile>
     <Compile Include="frmclientesaddrecpcaodocumentos.Designer.cs">
       <DependentUpon>frmclientesaddrecpcaodocumentos.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmTesteEmail.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmTesteEmail.Designer.cs">
+      <DependentUpon>frmTesteEmail.cs</DependentUpon>
     </Compile>
     <Compile Include="INICIO.cs">
       <SubType>Form</SubType>
@@ -200,6 +207,9 @@
     <EmbeddedResource Include="frmclientesaddrecpcaodocumentos.resx">
       <DependentUpon>frmclientesaddrecpcaodocumentos.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmTesteEmail.resx">
+      <DependentUpon>frmTesteEmail.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="INICIO.resx">
       <DependentUpon>INICIO.cs</DependentUpon>
     </EmbeddedResource>
@@ -265,6 +275,15 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\207-2078731_minimize-maximize-icon-png-window-minimize-button-white.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Delete.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\delete-icon-png-16.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\refresh.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
