--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -12,7 +12,7 @@
       <Value Profile="(Default)">ContabSysDB</Value>
     </Setting>
     <Setting Name="server" Type="System.String" Scope="User">
-      <Value Profile="(Default)">127.0.0.1</Value>
+      <Value Profile="(Default)">localhost</Value>
     </Setting>
     <Setting Name="porta" Type="System.String" Scope="User">
       <Value Profile="(Default)">3308</Value>
