largura colulas datagrid

--- a/App.config
+++ b/App.config
@@ -33,6 +33,21 @@
       <setting name="porta" serializeAs="String">
         <value>3308</value>
       </setting>
+      <setting name="SmtpServer" serializeAs="String">
+        <value>smtp-mail.outlook.com</value>
+      </setting>
+      <setting name="MailAddress" serializeAs="String">
+        <value>marcosmagalhaes86@outlook.pt</value>
+      </setting>
+      <setting name="PortaEmail" serializeAs="String">
+        <value>587</value>
+      </setting>
+      <setting name="emailUser" serializeAs="String">
+        <value>marcosmagalhaes86@outlook.pt</value>
+      </setting>
+      <setting name="emailPassword" serializeAs="String">
+        <value>M@galhae$020486</value>
+      </setting>
     </ContabSys.Properties.Settings>
   </userSettings>
 </configuration>
