--- a/ContabSys.csproj
+++ b/ContabSys.csproj
@@ -133,6 +133,12 @@
     <Compile Include="Config.Designer.cs">
       <DependentUpon>Config.cs</DependentUpon>
     </Compile>
+    <Compile Include="CriarUtilizadorAdmin.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CriarUtilizadorAdmin.Designer.cs">
+      <DependentUpon>CriarUtilizadorAdmin.cs</DependentUpon>
+    </Compile>
     <Compile Include="FichaCliente.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -187,6 +193,12 @@
     <Compile Include="ListClientesRecepcaosaft.Designer.cs">
       <DependentUpon>ListClientesRecepcaosaft.cs</DependentUpon>
     </Compile>
+    <Compile Include="password.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="password.Designer.cs">
+      <DependentUpon>password.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="addLancamentos.resx">
@@ -209,6 +221,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Config.resx">
       <DependentUpon>Config.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CriarUtilizadorAdmin.resx">
+      <DependentUpon>CriarUtilizadorAdmin.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FichaCliente.resx">
       <DependentUpon>FichaCliente.cs</DependentUpon>
@@ -236,6 +251,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ListClientesRecepcaosaft.resx">
       <DependentUpon>ListClientesRecepcaosaft.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="password.resx">
+      <DependentUpon>password.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -296,6 +314,18 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\rest-api-icon-24.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\png-transparent-eye-icon-eye-service-people-logo.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\pngwing.com.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\pngwing.com %281%29.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\cli1.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
