apagado codigo desnecessario

--- a/App.config
+++ b/App.config
@@ -37,16 +37,25 @@
         <value>smtp-mail.outlook.com</value>
       </setting>
       <setting name="MailAddress" serializeAs="String">
-        <value>marcosmagalhaes86@outlook.pt</value>
+        <value>email@outlook.pt</value>
       </setting>
       <setting name="PortaEmail" serializeAs="String">
         <value>587</value>
       </setting>
       <setting name="emailUser" serializeAs="String">
-        <value>marcosmagalhaes86@outlook.pt</value>
+        <value>email@outlook.pt</value>
       </setting>
       <setting name="emailPassword" serializeAs="String">
-        <value>M@galhae$020486</value>
+        <value>passwmail</value>
+      </setting>
+      <setting name="NIFEmpresa" serializeAs="String">
+        <value>231707681</value>
+      </setting>
+      <setting name="Aplicacao" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="DiretoriaLic" serializeAs="String">
+        <value />
       </setting>
     </ContabSys.Properties.Settings>
   </userSettings>
